syntax = "proto3";

option java_multiple_files = true;

package hcmus.zingmp3.genre;

message GenreRequest {
  string alias = 1;
}

message GenreResponse {
  string id = 1;
}

service GenreService {
  rpc getGenreByAlias(GenreRequest) returns (GenreResponse);
}