syntax = "proto3";

option java_multiple_files = true;

package hcmus.zingmp3.artist;

message ArtistRequest {
  string alias = 1;
}

message ArtistResponse {
  string id = 1;
}

service ArtistService {
  rpc getArtistByAlias(ArtistRequest) returns (ArtistResponse);
}